test-package-compiler/tests/snapshots/compiler_tests__async_with_await_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("waitFor"), span: Span { start: 134, end: 141 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test await on a future"), Whitespace("\n"), LineComment("// Await blocks until future resolves"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 142, end: 144 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: LeftBracket, span: Span { start: 145, end: 146 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Caret, span: Span { start: 146, end: 147 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("future"), span: Span { start: 147, end: 153 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("await"), span: Span { start: 154, end: 159 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: RightBracket, span: Span { start: 159, end: 160 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 161, end: 161 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
