test-package-compiler/tests/snapshots/compiler_tests__async_with_await_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 134,
                            end: 141,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 134,
                            end: 141,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test await on a future",
                        span: Span {
                            start: 134,
                            end: 141,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Await blocks until future resolves",
                        span: Span {
                            start: 134,
                            end: 141,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Assignment {
                target: Identifier(
                    Identifier {
                        name: "waitFor",
                        span: Span {
                            start: 134,
                            end: 141,
                        },
                    },
                ),
                value: Block(
                    Block {
                        parameters: [],
                        body: [
                            ExpressionStatement {
                                comments: CommentAttachment {
                                    leading: [],
                                    trailing: None,
                                    leading_blank_line: false,
                                    blank_line_after_comments: false,
                                },
                                expression: Return {
                                    value: MessageSend {
                                        receiver: Identifier(
                                            Identifier {
                                                name: "future",
                                                span: Span {
                                                    start: 147,
                                                    end: 153,
                                                },
                                            },
                                        ),
                                        selector: Unary(
                                            "await",
                                        ),
                                        arguments: [],
                                        is_cast: false,
                                        span: Span {
                                            start: 147,
                                            end: 159,
                                        },
                                    },
                                    span: Span {
                                        start: 146,
                                        end: 159,
                                    },
                                },
                                preceding_blank_line: false,
                            },
                        ],
                        span: Span {
                            start: 145,
                            end: 160,
                        },
                    },
                ),
                type_annotation: None,
                span: Span {
                    start: 134,
                    end: 160,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 134,
        end: 160,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}
