test-package-compiler/tests/snapshots/compiler_tests__async_with_await_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Undefined variable: future
